--- a/src/components/Common/styles.css
+++ b/src/components/Common/styles.css
@@ -6,7 +6,7 @@ nav {
   width: 300px;
 }
 
-.background {
+.background-motion {
   position: absolute;
   top: 0;
   right: 0;
@@ -16,7 +16,7 @@ nav {
   background: #fff;
 }
 
-button {
+.motion-button {
   outline: none;
   border: none;
   user-select: none;
