add customer.io integration. add scroll to cta. add privacy policy, contact us and tos pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,7 @@ body {
   font-family: 'Montserrat', Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  scroll-behavior: smooth;
 }
 
 .MuiTypography-root {
