--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=block');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=block');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
   --max-width: 1440px;
   --font-mono: 'Montserrat', Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+
+  --font-roboto: 'Roboto', serif;
 
   /* Colors */
   --blue: #343967;
@@ -43,6 +46,11 @@ body {
 
   line-height: 1.2;
 }
+/* .MuiTypography-root {
+  font-family: 'inherit';
+
+  line-height: 1.2;
+} */
 
 /* .MuiAccordion-root.Mui-expanded {
   margin: 0
